--- a/Palestinian_National_Authority.mw
+++ b/Palestinian_National_Authority.mw
@@ -1,390 +1,1 @@
-{{delete|No meaningful content}}
-Skip to News Feed
-Facebook
-
-Search Facebook
-JaysonHomeFind Friends
-Friend requests
-Messages
-Notifications
-Privacy Shortcuts
-Account Settings
-
-Jayson Mark
-Edit Profile
-FAVORITES
-News Feed
-4
-Messages
-Events
-APPS
-2
-Games
-
-Dragon City
-
-League of Angels
-
-8 Ball Pool
-Pokes
-Photos
-Saved
-Find Friends
-Suggest Edits
-Translate Facebook
-
-Criminal Case
-20+
-Games Feed
-GROUPS
-2
-Planet of Youth Clan Addict(PYCA)
-20+
-TROPANG KALOG THE ORIGINAL.
-17
-JOGO DO ADD
-Create Group
-1
-New Groups
-PAGES
-1
-Pages Feed
-Like Pages
-Create Page
-EVENTS
-Create Event
-
-1 request from Cedie Serencio Avila
-birthday
-Ruby Rosa Serencio Mier's birthday is today
-RECOMMENDED GAMES
-RECOMMENDED GAMES
-See More
-PEOPLE YOU MAY KNOWSee All
-PEOPLE YOU MAY KNOW
-
-Junieve Soliano
-18 mutual friends
-Add Friend
-
-Jonathan Cabanas
-6 mutual friends
-Add Friend
-
-Segundo Emia
-44 mutual friends
-Add Friend
-SUGGESTED PAGESSee All
-SUGGESTED PAGES
-CAM'z74 Miparanum's photo.
-CAM'z74 Miparanum
-Scientist · 32 likes
-Like Page
-English (US) · Privacy · Terms · Cookies · Advertising · Ad Choices · 
-More
-Facebook © 2015
- 
-Update Status
-Add Photos/VideoChoose Files
-Create Photo AlbumChoose a file to uploadChoose Files
-
-
-What's on your mind?
-Friends
-Post
-News Feed
-Juan Miguel Juguilon liked this.
-
-Washington Hiraldo with Cariel Jones and 35 others.
-November 5 at 8:04pm · Santo Domingo, Dominican Republic · 
-it really works 😱
-Washington Hiraldo's photo.
-44k Likes39k Comments419 Shares
-Like   Comment   Share
-Juan Miguel Juguilon liked this.
-Follow
-
-Germain Trim
-November 14 at 3:36pm · Edited · 
-Type amen fast
-Add me I accept ♥
-Germain Trim's photo.
-97k Likes44k Comments1.9k Shares
-Like   Comment   Share
-
-‎Jhoey Bhen‎ to TROPANG KALOG THE ORIGINAL.
-10 hrs · 
-Miss pano ka matulog,,,,.????
-Jhoey Bhen's photo.
-Like   Comment
-57 people like this.
-Comments
-3 of 51
-View previous comments
-Miraflor Abetria
-Miraflor Abetria 4
-Like · Reply · 50 mins
-Jonalyn Parulan
-Jonalyn Parulan 1&4
-Like · Reply · 45 mins
-Janna Mhae
-Janna Mhae 4
-Like · Reply · 42 mins
-Jayson Mark
-
-Write a comment...
-
-Choose File
-Suggested Pages
-· See All
-
-CAM'z74…
-32 people like…
-Like
-
-Hyfour 4
-37 people like…
-Like
-
-Kaye ka ye…
-61 people like…
-Like
-
-Walang4ever Sa…
-23 people like…
-Like
-Juan Miguel Juguilon and Frank Aeron Portallo liked this.
-
-Huanito Muca with Cedric Sarmento.
-November 14 at 11:05am · 
-Vote fast
-Huanito Muca's photo.
-185k Likes68k Comments1.5k Shares
-Like   Comment   Share
-Top Comments
-185,208 people like this.
-1,544 shares
-Comments
-Jayson Mark
-
-Write a comment...
-Choose File
-Lenwood Thomas
-Lenwood Thomas What is this implying, that we choose God over the devil.? Who in the hell made a woman with a congenital spine disease called spina bifida the fucking devil? You people post the stupidest shit. ..what type of example or knowledge are you embedding in this generation or the next generations head?. Choose fast on what? Don't leave people to tag along without purpose...at least have purpose behind your post.
-Like · Reply · 960 · November 14 at 3:21pm
-109 Replies · 31 mins
-Muhammad Umar
-Muhammad Umar I Know I'm Ugly But Can I Get 1 Cute Prince To Quickly Add Or Follow Me I'll Add You Fast.
-Muhammad Umar's photo.
-Like · Reply · 474 · November 14 at 11:10am
-99 Replies · 27 mins
-Bernard Shorts
-Bernard Shorts First of all, who is this white blue-eyed person? If you say Jesus then I'm sorry to tell you that is not true. People, please wake up and take a minute to think about something: Where is it in the Bible that states that Jesus sat down a took a photo. ...See More
-Like · Reply · 191 · November 14 at 4:38pm
-39 Replies · 17 mins
-Sunny Ashraf
-Sunny Ashraf Can I Get Cute Princess To Quickly Add Or follow me, I'll add you fast
-Sunny Ashraf's photo.
-Like · Reply · 316 · November 14 at 11:13am
-53 Replies · 1 hr
-4 of 68,134
-View more comments
-Juan Miguel Juguilon liked this.
-Follow
-
-Syed Hussain Adeel
-November 14 at 8:23pm · Edited · 
-Dont scroll without typing "rip"
-Add/follow Syed Hussain Adeel
-Syed Hussain Adeel's photo.
-200k Likes64k Comments2.7k Shares
-Like   Comment   Share
-200,587 people like this.
-2,762 shares
-Comments
-4 of 64,117
-View previous comments
-Nico Xyress Bumatay Avanzado
-Nico Xyress Bumatay Avanzado R.I.P
-Like · Reply · Just now
-Skhy Dalilis
-Skhy Dalilis RIP
-Like · Reply · Just now
-Jig Bustamante
-Jig Bustamante RIP
-Like · Reply · Just now
-Michaela Lising
-Michaela Lising Rip
-Like · Reply · Just now
-Jayson Mark
-
-Write a comment...
-Choose File
-
-‎Dexter Gamboa‎ to TROPANG KALOG THE ORIGINAL.
-3 hrs · 
-Pa post po...morning
-Dexter Gamboa's photo.
-Like   Comment
-17 people like this.
-Comments
-3 of 35
-View previous comments
-Yannie OLympain
-Yannie OLympain
-Like · Reply · 1 · 1 hr
-Denz Akirah Delavin Povadora
-Denz Akirah Delavin Povadora ...preho lng....! Uso nah yan
-Like · Reply · 1 · 1 hr
-Calvin Pabon
-Calvin Pabon cigoro??
-Like · Reply · 38 mins
-Jayson Mark
-
-Write a comment...
-Choose File
-
-Suzette Jane Puyod added 2 new photos — with Jean Labuan.
-November 14 at 7:27pm · 
-‪#‎haveaBLESSEDsunday‬
-Suzette Jane Puyod's photo.
-Suzette Jane Puyod's photo.
-Like   Comment   Share
-Juan Miguel Juguilon, Jonathan Culagbang, Suzette Jane Puyod and 16 others like this.
-Comments
-Joel Dejeron
-Joel Dejeron
-Like · Reply · November 14 at 8:03pm
-Junior P Cinco
-Junior P Cinco heart emoticon
-Like · Reply · 21 hrs
-Junior P Cinco
-Junior P Cinco "_
-Like · Reply · 21 hrs
-Jayson Mark
-
-Write a comment...
-Choose File
-Juan Miguel Juguilon liked this.
-Follow
-
-Steven Martinez
-November 14 at 3:05pm · 
-Plsss Type 'AMEN frown emoticon
-Steven Martinez's photo.
-58k Likes33k Comments1.9k Shares
-Like   Comment   Share
-
-‎Burjhen Burjana‎ to TROPANG KALOG THE ORIGINAL.
-22 hrs · 
-pareho
-daw
-olrayt...
-See More
-Burjhen Burjana's photo.
-Like   Comment
-57 people like this.
-Comments
-3 of 33
-View previous comments
-Dexter Barrongan Montoya
-Dexter Barrongan Montoya masarap
-Like · Reply · 5 hrs
-Kayle Frinces Bantillo
-Kayle Frinces Bantillo Saging
-Like · Reply · 4 hrs
-Alma Cruz
-Alma Cruz Tslong masarap after saging nman
-Like · Reply · Just now
-Jayson Mark
-
-Write a comment...
-Choose File
-Juan Miguel Juguilon liked this.
-Follow
-
-Renoll Anthony Webb
-November 13 at 8:02am · Edited · 
-VOTE in 3 second
-Must Read
-Boy: S**?
-Girl: I m not your girlfriend.
-Boy: $700 ?...
-See More
-Renoll Anthony Webb's photo.
-31k Likes12k Comments116 Shares
-Like   Comment   Share
-
-‎Merly Sombillo‎ to TROPANG KALOG THE ORIGINAL.
-21 hrs · 
-Yes for me ..
-Merly Sombillo's photo.
-Like   Comment
-75 people like this.
-1 share
-Comments
-3 of 12
-View previous comments
-Jc Princess Delavin
-Jc Princess Delavin Yah.
-Right yan...
-At syaka wala yang paki...
-Like · Reply · 9 hrs
-Karen Rabusa Ambrocio
-Karen Rabusa Ambrocio true
-Like · Reply · 4 hrs
-Karen De Chavez
-Karen De Chavez hindi totoo yan .. selos is an animal instinct
-Like · Reply · 1 hr
-Jayson Mark
-
-Write a comment...
-Choose File
-
-‎Merly Sombillo‎ to TROPANG KALOG THE ORIGINAL.
-22 hrs · 
-Haayy naku mas mahal pa motor nia kaysa asawa nia..
-Baliw hahaha:-) smile emoticon
-Merly Sombillo's photo.
-Like   Comment
-95 people like this.
-1 share
-Comments
-3 of 19
-View previous comments
-Jc Princess Delavin
-Jc Princess Delavin hahahA...
-pasaway
-Like · Reply · 4 hrs
-Milodi Leed
-Milodi Leed ayus ah
-Like · Reply · 4 hrs
-Tazrose Micabalo
-Tazrose Micabalo Hahaha hey....
-Like · Reply · 1 hr
-Jayson Mark
-
-Write a comment...
-Choose File
-Juan Miguel Juguilon liked this.
-Follow
-
-David Battiste
-November 6 at 9:05pm · 
-Dont Scroll Pass Without Typing "Yes"
-David Battiste's photo.
-94k Likes61k Comments2.7k Shares
-Like   Comment   Share
-Juan Miguel Juguilon liked this.
-Follow
-
-Usman Rana
-12 hrs · 
-Let's Make For Pray chain 😇😇
-Paris 😢😢😢
-Don't Scroll Please 🙏
-Usman Rana's photo.
-18k Likes5.5k Comments459 Shares
-Like   Comment   Share
-More Stories
-Chat (7)
+#REDIRECT [[Pangbangsang Awtoridad a Palestinu]]
