--- a/Template:Infobox_Mountain.mw
+++ b/Template:Infobox_Mountain.mw
@@ -10,18 +10,18 @@
 | style="border-top: 1px solid #999966; width: 220px" | {{{Location}}}
 {{#if:{{{Range|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">[[Mountain range|Range]]</td><td style="border-top: 1px solid #999966; width: 220px">{{{Range|}}}</td></tr>}}<!--
 -->{{#if:{{{Prominence|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">[[Topographic prominence|Kapanpansin]]</td><td style="border-top: 1px solid #999966; width: 220px">{{{Prominence|}}}</td></tr>}}<!--
--->{{#if:{{{Coordinates|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">[[Geographic coordinate system|Coordinates]]</td><td style="border-top: 1px solid #999966; width: 220px">{{{Coordinates|}}}</td></tr>}}<!--
+-->{{#if:{{{Coordinates|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">[[Geographic coordinate system|Koordinato]]</td><td style="border-top: 1px solid #999966; width: 220px">{{{Coordinates|}}}</td></tr>}}<!--
 -->{{#if:{{{Topographic map|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">[[Topographic map|Topo mapa]]</td><td style="border-top: 1px solid #999966; width: 220px">{{{Topographic map|}}}</td></tr>}}<!--
 -->{{#if:{{{Type|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">[[List of mountain types|Pinduan]]</td><td style="border-top: 1px solid #999966; width: 220px">{{{Type|}}}</td></tr>}}<!--
--->{{#if:{{{Age|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">[[Geologic time scale|Idad ning Batu]]</td><td style="border-top: 1px solid #999966; width: 220px">{{{Age|}}}</td></tr>}}<!--
+-->{{#if:{{{Age|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">[[Geologic time scale|Edad ning Batu]]</td><td style="border-top: 1px solid #999966; width: 220px">{{{Age|}}}</td></tr>}}<!--
 -->{{#if:{{{Last eruption|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">[[Volcano|Tauling akbung]]</td><td style="border-top: 1px solid #999966; width: 220px">{{{Last eruption|}}}</td></tr>}}<!--
 -->{{#if:{{{First ascent|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">[[First ascent]]</td><td style="border-top: 1px solid #999966; width: 220px">{{{First ascent|}}}</td></tr>}}<!--
--->{{#if:{{{Easiest route|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">Easiest [[Climbing route|baltang]]</td><td style="border-top: 1px solid #999966; width: 220px">{{{Easiest route|}}}</td></tr>}}<!--
+-->{{#if:{{{Easiest route|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">Pekamalagwang [[Climbing route|baltang]]</td><td style="border-top: 1px solid #999966; width: 220px">{{{Easiest route|}}}</td></tr>}}<!--
 -->{{#if:{{{Grid_ref_UK|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">[[British national grid reference system|OS grid reference]]</td><td style="border-top: 1px solid #999966; width: 220px">{{gbm4ibx|{{{Grid_ref_UK|}}}}}</td></tr>}}<!--
 -->{{#if:{{{Grid_ref_Ireland|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">[[Irish national grid reference system|OSI/OSNI grid reference]]</td><td style="border-top: 1px solid #999966; width: 220px">[http://getamap.ordnancesurvey.co.uk/getamap/frames.htm?mapAction=gaz&gazName=g&gazString={{{Grid_ref_Ireland|}}} {{{Grid_ref_Ireland}}}]</td></tr>}}<!--
 -->{{#if:{{{Listing|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">[[Hill lists in the British Isles|Listing]]</td><td style="border-top: 1px solid #999966; width: 220px">{{{Listing|}}}</td></tr>}}<!--
 -->{{#if:{{{Translation|}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">Translation</td><td style="border-top: 1px solid #999966; width: 220px">''{{{Translation|}}}'' ({{{Language|}}})</td></tr>}}<!--
--->{{#if:{{{Pronunciation|Pami-bigkas}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">[[International Phonetic Alphabet|Agkas]]</td><td style="border-top: 1px solid #999966; width: 220px">{{IPA|[{{{Pronunciation}}}]}}</td></tr>}}
+-->{{#if:{{{Pronunciation|Pami-bigkas}}}|<tr><td style="border-top: 1px solid #999966; border-right: 1px solid #999966; background: #e7dcc3; width: 85px">[[International Phonetic Alphabet|Paminagkas]]</td><td style="border-top: 1px solid #999966; width: 220px">{{IPA|[{{{Pronunciation}}}]}}</td></tr>}}
 |}<noinclude>
 
 ==Usage==
@@ -45,7 +45,7 @@
 | Lista = 
 | Salin = 
 | Amanu = 
-| Pronunciation = 
+| Paminagkas = 
 }}</pre>
 [[Category:Templates using ParserFunctions|{{PAGENAME}}]]
 [[Category:geography infobox templates|Mountain]]
