*Empty MediaWiki Message*

--- a/Bunduk_Arayat.mw
+++ b/Bunduk_Arayat.mw
@@ -11,11 +11,11 @@
  | Topographic map = 
  | Type            = [[Stratovolcano]]
  | Age             = 
- | Last eruption = Unknown
+ | Last eruption   = alang makatala
  | First ascent    =
  | Easiest route   =
  | Translation     = 
- | Language        = english
+ | Language        = Kapampangan
  | Pronunciation   = 
 }}
 
