*Empty MediaWiki Message*

--- a/Thalía.mw
+++ b/Thalía.mw
@@ -1,5 +1,5 @@
 [[File:ThaliaSodi.jpg|thumb|I Thalía anyang 2006]]
-I '''Ariadna Thalía Sodi Miranda''' (mibait Agostu 6 1971 king [[Meyiku Lakanbalen]]) metung yang artista, talakanta ampong awtor king [[Mexico|Meyiku]].
+I '''Ariadna Thalía Sodi Miranda''' (mibait Agostu 6 1971 king [[Mexico City|Meyiku Lakanbalen]]) metung yang artista, talakanta ampong awtor king [[Mexico|Meyiku]].
 
 ==Suglung Palwal==
 {{Commons category}}
