--- a/Syngman_Rhee.mw
+++ b/Syngman_Rhee.mw
@@ -5,4 +5,7 @@ I '''Syngman Rhee''' ([[Hangul]]:이승만, [[Hanja]]:李承晩; mibait anyang [
 {{Commons}}
 *[https://archive.org/details/foia_Rhee_Syngman-HQ-1 Syngman Rhee's FBI files]
 
-[[Category:Pamuntuk king Mauling Korea]]
+[[Category:Deng Koreanu]]
+[[Category:Deng pamuntuk ning Mauling Korea]]
+[[Category:1875 kebaitan]]
+[[Category:1965 kematayan]]
