--- a/Syngman_Rhee.mw
+++ b/Syngman_Rhee.mw
@@ -6,6 +6,6 @@ I '''Syngman Rhee''' ([[Hangul]]:이승만, [[Hanja]]:李承晩; mibait anyang [
 *[https://archive.org/details/foia_Rhee_Syngman-HQ-1 Syngman Rhee's FBI files]
 
 [[Category:Deng Koreanu]]
-[[Category:Deng pamuntuk ning Mauling Korea]]
+[[Category:Deng Pamuntuk ning Mauling Korea]]
 [[Category:1875 kebaitan]]
 [[Category:1965 kematayan]]
