--- a/Ginea-Bisáu.mw
+++ b/Ginea-Bisáu.mw
@@ -14,8 +14,8 @@
 |government_type =  Republic
 |leader_title1 =[[President of Guinea-Bissau|President]]
 |leader_title2 = [[Heads of Government of Guinea-Bissau|Prime Minister]]
-|leader_name1 =[[João Bernardo Vieira]]
-|leader_name2 = [[Aristides Gomes]]
+|leader_name1 =[[José Mário Vaz]]
+|leader_name2 = [[Carlos Correia]]
 |area_rank = 133rd
 |area_magnitude = 1 E9
 |area=36,120
