*Empty MediaWiki Message*

--- a/Cristiano_Ronaldo.mw
+++ b/Cristiano_Ronaldo.mw
@@ -1,3 +1,4 @@
+[[File:Cristiano Ronaldo and Lionel Messi - Portugal vs Argentina, 9th February 2011.jpg|thumb|]]
 I '''Cristiano Ronaldo dos Santos Aveiro''' (mibait [[Pebreru 5]], [[1985]]), metung yang [[Futbol|futbolistang]] [[Portugal|Portuges]].
 
 {{stub}}
