--- a/Seventeen_(banda).mw
+++ b/Seventeen_(banda).mw
@@ -1,4 +1,5 @@
-Ing '''SEVENTEEN''' ([[Hangul]]: 세븐틴) metung yang banda king [[Mauling Korea]].
+[[File:SEVENTEEN arriving @ Music Bank.jpg|thumb|Gulut (L-R): Jun, DK, Hoshi, Wonwoo, S.Coups, The8, Mingyu; Karap (L-R): Vernon, Seungkwan, Woozi, Joshua, Jeonghan, Dino.]]
+Ing '''SEVENTEEN''' ([[Hangul]]: 세븐틴), o '''SVT''', metung yang banda king [[Mauling Korea]].
 
 ==Suglung palwal==
 * [http://www.seventeen-17.com Sityu opisyal]
