*Empty MediaWiki Message*

--- a/Culleredo.mw
+++ b/Culleredo.mw
@@ -1,7 +1,7 @@
 {{Infobox City |
 official_name = Concello de Culleredo|
 nickname = Culleredo|
-image_flag = Culleredo Flag.gif |
+image_flag = Bandeira do Concello de Culleredo.svg |
 image_seal = |
 image_shield = Escudo de Culleredo.svg|
 image_map = Situacion_Culleredo.PNG |
