*Empty MediaWiki Message*

--- a/Amanung_Kankanaey.mw
+++ b/Amanung_Kankanaey.mw
@@ -1,4 +1,4 @@
-Ing '''Amanung Kankanaey''' ('''Kankana-ey'''; '''Kankanay''' o '''Kankanai''' king [[Sagada]]), metung ya kareng pamyalita king [[Cordillera]], [[Pangulung Luzon]], [[Pilipinas]].<ref>Allen, Janet L. 2014. **Kankanaey: A Role and Reference Grammar Analysis** Dallas:SIL International</ref>
+Ing '''Amanung Kankanaey''' ('''Kankana-ey'''; '''Kankanay''' o '''Kankanai''' king [[Sagada]]), metung ya kareng pamyalita king [[Cordillera Administrative Region|Cordillera]], [[Pangulung Luzon]], [[Pilipinas]].<ref>Allen, Janet L. 2014. **Kankanaey: A Role and Reference Grammar Analysis** Dallas:SIL International</ref>
 
 ==Dalerayan==
 {{reflist}}
