Lilipat ya king [[Labuad Administratibu ning Cordillera]]

--- a/Cordillera_Administrative_Region.mw
+++ b/Cordillera_Administrative_Region.mw
@@ -1,85 +1,1 @@
-{{Infobox Philippine region |
-  name           = Cordillera<br>Administrative Region |
-  map_file       = Ph_locator_car.png |
-  center         = [[Baguio City]] |
-  population     = 1,365,220 |
-  density_km2    = 75 |
-  area_km2       = 18,294 |
-  provinces      = 6 |
-  cities         = 1 |
-  municipalities = 76 |
-  barangays      = 1176 |
-  districts      = 7 |
-  languages      = [[Ilokano Amanu|Ilokano]], [[Kalinga Amanu|Kalinga]], [[Kankanaey Amanu|Kankanaey]], [[Ifugao Amanu|Ifugao]], [[Itneg Amanu|Itneg]], [[Isneg Amanu|Isneg]], [[Pangasinan Amanu|Pangasinense]], aliwapa |
-}}
-
-===Politika Pangadake===
-[[Image:Ph cordillera.png|thumb]]
-Ing CAR atin yang 6 [[Ding Lalawigan ning Filipinas|lalawigan]] at [[Baguio Lakanbalen]].
-
-
-{| class="wikitable"
-|- bgcolor=#cccccc
-! colspan=2 | [[Ding Lalawigan ning Filipinas|Lalawigan]]/[[Ding Lakanbalen ning Filipinas|Lakanbalen]] !! Tungku!! Populasyun<br>([[2000]]) !! Lapad/Dagul<br>([[square kilometre|km²]]) !! Pop. density<br />(per km²)
-|-
-|[[Image:Ph_seal_abra.png|20px]]
-|[[Abra|Abra]]
-|[[Bangued, Abra|Bangued]]
-|209,491 
-|3,975.6
-|52.7
-|-
-|[[Image:Ph_seal_apayao.png|20px]]
-|[[Apayao]]
-|[[Kabugao, Apayao|Kabugao]]
-|97,129 
-|3,927.9
-|24.7
-|-
-|[[Image:Ph_seal_benguet.png|20px]]
-|[[Benguet]]
-|[[La Trinidad, Benguet|La Trinidad]]
-|330,129 
-|2,599.4
-|127.0
-|-
-|[[Image:Ph_seal_ifugao.png|20px]]
-|[[Ifugao]]
-|[[Lagawe, Ifugao|Lagawe]]
-|161,623   
-|2,517.8
-|64.2
-|-
-|[[Image:Ph_seal_kalinga.png|20px]]
-|[[Kalinga]]
-|[[Tabuk, Kalinga|Tabuk]]
-|174,023   
-|3,119.7
-|55.8
-|-
-|[[Image:Ph_seal_mountain_province.png|20px]]
-|[[Mountain Province]]
-|[[Bontoc, Mountain Province|Bontoc]]
-|140,439    
-|2,097.3
-|67.0
-|-
-! style="background: gray" |
-! style="background: gray" |
-! style="background: gray" |
-! style="background: gray" |
-! style="background: gray" |
-! style="background: gray" |
-|-
-|
-|[[Baguio Lakanbalen]]
-|&mdash;
-|252,386
-|57.5 
-|4,839.3
-|}
-{{Luzon lateral}} 
-{{Philippine regions}}
-
-
-[[Category:Ding Labuad king Filipinas]]
+#REDIRECT [[Labuad Administratibu ning Cordillera]]
