Replacing Flag_of_Uzbek_SSR.svg with [[File:Flag_of_the_Uzbek_SSR.svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: typo fix).

--- a/Template:Country_data_Uzbekistan.mw
+++ b/Template:Country_data_Uzbekistan.mw
@@ -2,7 +2,7 @@
 | alias           = Uzbekistan
 | shortname alias = Uzbekistan
 | flag alias      = Flag of Uzbekistan.svg
-| flag alias-SSR  = Flag of Uzbek SSR.svg
+| flag alias-SSR  = Flag of the Uzbek SSR.svg
 | countryname = {{{countryname|Uzbekistan<!-- MUST MATCH SUFFIX OF PAGENAME!! -->}}}
 | size = {{{size|}}}
 | name = {{{name|}}}
