*Empty MediaWiki Message*

--- a/Template:Florida.mw
+++ b/Template:Florida.mw
@@ -3,22 +3,22 @@
 |colspan=2 |
 {| class=toccolours style="margin: 0 2em 0 2em;" width=100% style="background:#ccccff"
 |  | [[Image:Flag of Florida.svg |100px]]
-! width=100% | <font size=3>[[U.S. state|State]] ning [[Florida]]</font><br><small>([[Government of Florida|Gubyernu]]&nbsp;| [[History of Florida|Amlat]]&nbsp;| [[List of people from Florida|Deng Floridians]])</small></small>
+! width=100% | <font size=3>[[U.S. state|Estadu]] ning [[Florida]]</font><br><small>([[Gobyernu ning Florida|Gobyernu]]&nbsp;| [[Kasaleselan ning Florida|Amlat]]&nbsp;| [[Tala da reng tau ibat Florida|Deng Floridians]])</small></small>
 | rowspan=2 | [[Image:Seal of Florida.svg|70px]]
 |}
 |-
 ! style="background: #ccccff" | '''[[List of U.S. state capitals|Tungku]]:'''
 |[[Tallahassee, Florida|Tallahassee]]
 |-
-! style="background: #ccccff" | '''[[List of cities in Florida|Peka Syudad]]:'''
+! style="background: #ccccff" | '''[[Tala da reng lakanbalen king Florida|Peka Syudad]]:'''
 | style="font-size: smaller;" |[[Cape Coral, Florida|Cape Coral]]&nbsp;| [[Clearwater, Florida|Clearwater]]&nbsp;| [[Coral Springs, Florida|Coral Springs]]&nbsp;| [[Fort Lauderdale, Florida|Fort Lauderdale]]&nbsp;| [[Gainesville, Florida|Gainesville]]&nbsp;| [[Hialeah, Florida|Hialeah]]&nbsp;| [[Hollywood, Florida|Hollywood]]&nbsp;| [[Jacksonville, Florida|Jacksonville]]&nbsp;| [[Lakeland, Florida|Lakeland]]&nbsp;| [[Miami, Florida|Miami]]&nbsp;| [[Miami Gardens, Florida|Miami Gardens]]&nbsp;| [[Miramar, Florida|Miramar]]&nbsp;| [[North Miami, Florida|North Miami]]&nbsp;| [[Orlando, Florida|Orlando]]&nbsp;| [[Pembroke Pines, Florida|Pembroke Pines]]&nbsp;| [[Plantation, Broward County, Florida|Plantation]]&nbsp;| [[Pompano Beach, Florida|Pompano Beach]]&nbsp;| [[Port St. Lucie, Florida|Port St. Lucie]]&nbsp;| [[St. Petersburg, Florida|St. Petersburg]]&nbsp;| [[Sunrise, Florida|Sunrise]]&nbsp;| [[Tallahassee, Florida|Tallahassee]]&nbsp;| [[Tampa, Florida|Tampa]]&nbsp;| [[West Palm Beach, Florida|West Palm Beach]] </font>
 |-
-! style="background: #ccccff" | '''[[List of cities in Florida|Aliwa pang Karinan]]:'''
+! style="background: #ccccff" | '''[[Tala da reng lakanbalen king Florida|Aliwa pang Karinan]]:'''
 | style="font-size: xx-small;" |[[Altamonte Springs, Florida|Altamonte Springs]]&nbsp;| [[Apopka, Florida|Apopka]]&nbsp;| [[Aventura, Florida|Aventura]]&nbsp;| [[Boca Raton, Florida|Boca Raton]] &nbsp;| [[Bonita Springs, Florida|Bonita Springs]]&nbsp;| [[Boynton Beach, Florida|Boynton Beach]]&nbsp;| [[Bradenton, Florida|Bradenton]]&nbsp;| [[Brandon, Florida|Brandon]]&nbsp;| [[Coconut Creek, Florida|Coconut Creek]]&nbsp;| [[Cooper City, Florida|Cooper City]]&nbsp;| [[Coral Gables, Florida|Coral Gables]]&nbsp;| [[Davie, Florida|Davie]]&nbsp;| [[Daytona Beach, Florida|Daytona Beach]]&nbsp;| [[Deerfield Beach, Florida|Deerfield Beach]]&nbsp;| [[Delray Beach, Florida|Delray Beach]]&nbsp;| [[Deltona, Florida|Deltona]]&nbsp;| [[Dunedin, Florida|Dunedin]]&nbsp;| [[Fort Myers, Florida|Fort Myers]]&nbsp;| [[Fort Pierce, Florida|Fort Pierce]]&nbsp;|  [[Greenacres, Florida|Greenacres]]&nbsp;| [[Hallandale Beach, Florida|Hallandale Beach]]&nbsp;| [[Homestead, Florida|Homestead]]&nbsp;| [[Jupiter, Florida|Jupiter]]&nbsp;|    [[Kissimmee, Florida|Kissimmee]]&nbsp;| [[Lake Worth, Florida|Lake Worth]]&nbsp;| [[Lakeland, Florida|Lakeland]]&nbsp;| [[Largo, Florida|Largo]]&nbsp;| [[Lauderdale Lakes, Florida|Lauderdale Lakes]]&nbsp;| [[Lauderhill, Florida|Lauderhill]]&nbsp;| [[Margate, Florida|Margate]]&nbsp;| [[Melbourne, Florida|Melbourne]]&nbsp;| [[Miami Beach, Florida|Miami Beach]]&nbsp;| [[North Lauderdale, Florida|North Lauderdale]]&nbsp;| [[North Miami Beach, Florida|North Miami Beach]]&nbsp;| [[North Miami, Florida|North Miami]]&nbsp;| [[Oakland Park, Florida|Oakland Park]]&nbsp;| [[Ocala, Florida|Ocala]]&nbsp;| [[Ocoee, Florida|Ocoee]]&nbsp;| [[Ormond Beach, Florida|Ormond Beach]]&nbsp;| [[Oviedo, Florida|Oviedo]]&nbsp;| [[Palm Bay, Florida|Palm Bay]]&nbsp;| [[Palm Beach Gardens, Florida|Palm Beach Gardens]]&nbsp;| [[Palm Harbor, Florida|Palm Harbor]]&nbsp;| [[Panama City, Florida|Panama City]]&nbsp;| [[Pensacola, Florida|Pensacola]]&nbsp;| [[Pinellas Park, Florida|Pinellas Park]]&nbsp;| [[Plant City, Florida|Plant City]]&nbsp;| [[Plantation, Sarasota County, Florida|Plantation]]&nbsp;| [[Port Charlotte, Florida|Port Charlotte]]&nbsp;| [[Port Orange, Florida|Port Orange]]&nbsp;| [[Riviera Beach, Florida|Riviera Beach]]&nbsp;| [[Royal Palm Beach, Florida|Royal Palm Beach]]&nbsp;| [[St. Augustine, Florida|St. Augustine]]&nbsp;| [[Sanford, Florida|Sanford]]&nbsp;| [[Sarasota, Florida|Sarasota]]&nbsp;| [[Spring Hill, Florida|Spring Hill]]&nbsp;| [[Sunrise, Florida|Sunrise]]&nbsp;| [[Tamarac, Florida|Tamarac]]&nbsp;| [[Temple Terrace, Florida|Temple Terrace]]&nbsp;| [[Titusville, Florida|Titusville]]&nbsp;|  [[Vero Beach, Florida|Vero Beach]]&nbsp;|  [[Wellington, Florida|Wellington]]&nbsp;| [[Weston, Florida|Weston]]&nbsp;| [[Winter Haven, Florida|Winter Haven]]&nbsp;| [[Winter Park, Florida|Winter Park]]&nbsp;| [[Winter Springs, Florida|Winter Springs]] </font>
 |-
 ! style="background: #ccccff" | '''[[Regions of the United States#Florida|Labuad]]:'''
 | style="font-size: smaller;" | [[Central Florida]]&nbsp;| [[Emerald Coast]]&nbsp;| [[First Coast]]&nbsp;| [[Florida Panhandle]]&nbsp;| [[Florida Keys]]&nbsp;| [[Nature Coast]]&nbsp;| [[North Central Florida]] &nbsp;| [[South Florida metropolitan area|South Florida]]&nbsp;| [[Southwest Florida]]&nbsp;|  [[Space Coast]]&nbsp;| [[Florida Suncoast|Sun Coast]]&nbsp;| [[Tampa Bay Area]]&nbsp;| [[Treasure Coast]]</font>
 |-
-! style="background: #ccccff" | '''[[List of counties in Florida|Deng Counties]]:'''
+! style="background: #ccccff" | '''[[Tala da reng kondadu king Florida|Deng Kondadu]]:'''
 | style="font-size: smaller;" | [[Alachua County, Florida|Alachua]]&nbsp;| [[Baker County, Florida|Baker]]&nbsp;| [[Bay County, Florida|Bay]]&nbsp;| [[Bradford County, Florida|Bradford]]&nbsp;| [[Brevard County, Florida|Brevard]]&nbsp;| [[Broward County, Florida|Broward]]&nbsp;| [[Calhoun County, Florida|Calhoun]]&nbsp;| [[Charlotte County, Florida|Charlotte]]&nbsp;| [[Citrus County, Florida|Citrus]]&nbsp;| [[Clay County, Florida|Clay]]&nbsp;| [[Collier County, Florida|Collier]]&nbsp;| [[Columbia County, Florida|Columbia]]&nbsp;|[[Dade County, Florida|Dade]]&nbsp;|[[DeSoto County, Florida|DeSoto]]&nbsp;| [[Dixie County, Florida|Dixie]]&nbsp;| [[Duval County, Florida|Duval]]&nbsp;| [[Escambia County, Florida|Escambia]]&nbsp;| [[Flagler County, Florida|Flagler]]&nbsp;| [[Franklin County, Florida|Franklin]]&nbsp;| [[Gadsden County, Florida|Gadsden]]&nbsp;| [[Gilchrist County, Florida|Gilchrist]]&nbsp;| [[Glades County, Florida|Glades]]&nbsp;| [[Gulf County, Florida|Gulf]]&nbsp;| [[Hamilton County, Florida|Hamilton]]&nbsp;| [[Hardee County, Florida|Hardee]]&nbsp;| [[Hendry County, Florida|Hendry]]&nbsp;| [[Hernando County, Florida|Hernando]]&nbsp;| [[Highlands County, Florida|Highlands]]&nbsp;| [[Hillsborough County, Florida|Hillsborough]]&nbsp;| [[Holmes County, Florida|Holmes]]&nbsp;| [[Indian River County, Florida|Indian River]]&nbsp;| [[Jackson County, Florida|Jackson]]&nbsp;| [[Jefferson County, Florida|Jefferson]]&nbsp;| [[Lafayette County, Florida|Lafayette]]&nbsp;| [[Lake County, Florida|Lake]]&nbsp;| [[Lee County, Florida|Lee]]&nbsp;| [[Leon County, Florida|Leon]]&nbsp;| [[Levy County, Florida|Levy]]&nbsp;| [[Liberty County, Florida|Liberty]]&nbsp;| [[Madison County, Florida|Madison]]&nbsp;| [[Manatee County, Florida|Manatee]]&nbsp;| [[Marion County, Florida|Marion]]&nbsp;| [[Martin County, Florida|Martin]]&nbsp;| [[Miami-Dade County, Florida|Miami-Dade]]&nbsp;| [[Monroe County, Florida|Monroe]]&nbsp;| [[Nassau County, Florida|Nassau]]&nbsp;| [[Okaloosa County, Florida|Okaloosa]]&nbsp;| [[Okeechobee County, Florida|Okeechobee]]&nbsp;| [[Orange County, Florida|Orange]]&nbsp;| [[Osceola County, Florida|Osceola]]&nbsp;| [[Palm Beach County, Florida|Palm Beach]]&nbsp;| [[Pasco County, Florida|Pasco]]&nbsp;| [[Pinellas County, Florida|Pinellas]]&nbsp;| [[Polk County, Florida|Polk]]&nbsp;| [[Putnam County, Florida|Putnam]]&nbsp;| [[Santa Rosa County, Florida|Santa Rosa]]&nbsp;| [[Sarasota County, Florida|Sarasota]]&nbsp;| [[Seminole County, Florida|Seminole]]&nbsp;| [[St. Johns County, Florida|St. Johns]]&nbsp;| [[St. Lucie County, Florida|St. Lucie]]&nbsp;| [[Sumter County, Florida|Sumter]]&nbsp;| [[Suwannee County, Florida|Suwannee]]&nbsp;| [[Taylor County, Florida|Taylor]]&nbsp;| [[Union County, Florida|Union]]&nbsp;| [[Volusia County, Florida|Volusia]]&nbsp;| [[Wakulla County, Florida|Wakulla]]&nbsp;| [[Walton County, Florida|Walton]]&nbsp;| [[Washington County, Florida|Washington]]</font>
 |}<noinclude>[[Category:United States state templates|{{PAGENAME}}]]</noinclude>
