*Empty MediaWiki Message*

--- a/Template:Five_oceans.mw
+++ b/Template:Five_oceans.mw
@@ -1,6 +1,6 @@
 {| class="infobox"
 |-
-! style="background: #BFD7FF; padding:0 1em;" | '''Ding limang [[ocean]] ning [[Yatu]]'''
+! style="background: #BFD7FF; padding:0 1em;" | '''Ding limang [[karayatmalatan]] ning [[Yatu]]'''
 |-
 |
 * [[Atlantic Ocean]]
