--- a/Template:Country_data_Kazakhstan.mw
+++ b/Template:Country_data_Kazakhstan.mw
@@ -2,7 +2,7 @@
 | alias           = Kazakhstan
 | shortname alias = Kazakhstan
 | flag alias      = Flag of Kazakhstan.svg
-| flag alias-SSR  = Flag of Kazakh SSR.svg
+| flag alias-SSR  = Flag of the Kazakh SSR.svg
 | countryname = {{{countryname|Kazakhstan<!-- MUST MATCH SUFFIX OF PAGENAME!! -->}}}
 | size = {{{size|}}}
 | name = {{{name|}}}
