Replacing Flag_of_Turkmen_SSR.svg with [[File:Flag_of_the_Turkmen_SSR.svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: standardizin'.).

--- a/Template:Country_data_Turkmenistan.mw
+++ b/Template:Country_data_Turkmenistan.mw
@@ -2,7 +2,7 @@
 | alias           = Turkmenistan
 | shortname alias = Turkmenistan
 | flag alias      = Flag of Turkmenistan.svg
-| flag alias-SSR  = Flag of Turkmen SSR.svg
+| flag alias-SSR  = Flag of the Turkmen SSR.svg
 | countryname = {{{countryname|Turkmenistan<!-- MUST MATCH SUFFIX OF PAGENAME!! -->}}}
 | size = {{{size|}}}
 | name = {{{name|}}}
