*Empty MediaWiki Message*

--- a/Amanung_Ingles.mw
+++ b/Amanung_Ingles.mw
@@ -1,4 +1,5 @@
-[[File:Anglospeak.svg|thumb|350px|Ing ''angloespera''.]]
+[[File:Anglospeak.svg|thumb|300px|Ing ''angloespera''.]]
+[[File:EN English Language Symbol ISO 639-1 IETF Language Tag Icon.svg|thumb|left|upright|EN ([[ISO 639]]-1)]]
 Ing '''Amanung Ingles''' (''English language'') metung ya kareng pamyalita king yatu.
 
 ==Suglung palwal==
