--- a/Pateros.mw
+++ b/Pateros.mw
@@ -18,8 +18,18 @@ Ing '''Pateros''' metung yang [[Ding Balen ning Filipinas|balen]] king [[Metro M
 
 Ing Pateros iya ing pekamalating lakanbalen at balen ning Metro Manila karas keng populasyun at king lapad ning gabun, dapot iti ing pangadua karas keng pangasiksik da rng tau a manga 27 libu balang kilumetru kudardu kaibat ning [[Menila]].
 
-== Amlat ==
-
+{{Philippine Census 
+| title = Sensus ning Populasyun <br> Pateros
+| 1990 = 51409
+| 1995 = 55286
+| 2000 = 57407
+| 2007 = 61940
+| 2010 = 64147
+| 2015 =
+| 2020 =
+| 2025 =
+| 2030 =
+}}
 
 == Deng Barangay ==
 
