*Empty MediaWiki Message*

--- a/Amanung_Danes.mw
+++ b/Amanung_Danes.mw
@@ -3,5 +3,5 @@ Ing '''Amanung Danes''' (''Dansk'', <small>paminagkas</small>
 
 {{Suli}}
 
-[[Category:Deng amanu king Europa]]
+[[Category:Deng amanu ning Europa]]
 [[Category:Deng amanung Ermaniku]]
