*Empty MediaWiki Message*

--- a/Espanyol_(amanu).mw
+++ b/Espanyol_(amanu).mw
@@ -68,7 +68,7 @@ Ing Ladino naman, a keraklan ing Castila ketang panaun a medieval (Edad Media, M
 [[Category:Deng amanu ning Nikaragwa]]
 [[Category:Deng amanu ning Panama]]
 [[Category:Deng amanu ning Paragway]]
-[[Category:Languages of Peru]]
+[[Category:Deng amanu ning Peru]]
 [[Category:Deng amanu ning Pilipinas]]
 [[Category:Deng amanu ning Estadus Unidus]]
 [[Category:Deng amanu ning United States Virgin Islands]]
