*Empty MediaWiki Message*

--- a/Espanyol_(amanu).mw
+++ b/Espanyol_(amanu).mw
@@ -76,4 +76,4 @@ Ing Ladino naman, a keraklan ing Castila ketang panaun a medieval (Edad Media, M
 [[Category:Deng amanu ning Beneswela]]
 [[Category:West Iberian languages]]
 [[Category:Deng amanung Romanse]]
-[[Category:Deng amanu king Europa]]
+[[Category:Deng amanu ning Europa]]
