*Empty MediaWiki Message*

--- a/Amanung_Sweku.mw
+++ b/Amanung_Sweku.mw
@@ -4,4 +4,4 @@ Ing '''Amanung Sweku''' (''Svenska'', [[Amanung Ingles|Ingles]]: ''Swedish'', [[
 
 [[Category:Deng amanung Indoeuropeu]]
 [[Category:Deng amanung Ermaniku]]
-[[Category:Deng amanu king Europa]]
+[[Category:Deng amanu ning Europa]]
