*Empty MediaWiki Message*

--- a/Amanung_Portuges.mw
+++ b/Amanung_Portuges.mw
@@ -6,5 +6,5 @@ Ing '''Amanung Portuges''' (''português''; ''lingua portuguesa''; ''Portuguese'
 
 {{Suli}}
 
-[[Category:Deng amanu king Europa]]
+[[Category:Deng amanu ning Europa]]
 [[Category:Deng amanung Romanse]]
