--- a/Amanung_Ingles.mw
+++ b/Amanung_Ingles.mw
@@ -8,5 +8,5 @@ Ing '''Amanung Ingles''' (''English language'') metung ya kareng pamyalita king 
 
 {{Suli}}
 
-[[Category:Deng amanu king Europa]]
+[[Category:Deng amanu ning Europa]]
 [[Category:Deng amanung Ermaniku]]
