--- a/Category:Deng_amanu_ning_Europa.mw
+++ b/Category:Deng_amanu_ning_Europa.mw
@@ -1,1 +1,4 @@
 {{Commons category|Languages of Europe}}
+
+[[Category:Europa]]
+[[Category:Deng amanu agpang king kontinenti|Deng amanun ning Europa]]
