*Empty MediaWiki Message*

--- a/Carly_Rae_Jepsen.mw
+++ b/Carly_Rae_Jepsen.mw
@@ -11,3 +11,5 @@ I '''Carly Rae Jepsen''' (mibait Nobyembri 21,<ref>{{cite web|title=Carly Rae Je
 * {{IBDB name|495985}}
 
 {{Suli}}
+
+[[Category:1985 kebaitan]]
