--- a/Ibpa_Mi.mw
+++ b/Ibpa_Mi.mw
@@ -27,3 +27,5 @@ Ampon ipatawad Mu kekami ring sala mi keka,</br>
 anti ing pamamatawad mi kareng mikasala kekami.</br>
 E Mu ke ipaisaul king tuksu,</br>
 nune ikabus Mu kami kareng sablang marok. Amen.</br>
+
+[[Category:Kapampangan Pangadi]]
