--- a/Sasalpantaya_Ku.mw
+++ b/Sasalpantaya_Ku.mw
@@ -1,17 +1,3 @@
-===Baryanting Filipino===
-
-Sasalpantaya  ku king Diyos, Ibpang mayupayang tutu, linalang king banwa at yatu.<br />
-At kang Hesukristong Anak nang Bugtung a Guinu tamu.<br />
-Pengagli Ya king upaya ning Banal a Espiritu, mibayit Ya kang Santa Mariang Birhen.<br />
-Linasa Ya lalam nang upaya nang Ponsyo Pilato. Mipaku ya king krus, mete Ya at micutcut.<br />
-Tinipa Ya kareng mete. King katlung aldo, sinubli yang mebye. Pepaitas Ya banwa,<br /> 
-makalukluk wanan ning Diyos Ibpang mayupayang tutu. Ibat karin, magbalik Ya naman keti<br />
-ban mukum kareng mabye ampon mengamate.
-
-Sasalpantaya ku king Banal a Espiritu, king Santa Iglesia Katolika, king pamisamak ding Santos,<br /> 
-king pangapatawad dareng kasalanan, king pangasubli rang mie ring mete, at king bye alang angga.<br />
-Amen.
-
 ===Baryanting Espanyol===
 Sasalpantaya cu qñg Dios, Ibpang mayupayang tutu, linalang qñg banua't yatu.<br />
 At cang Jesucristong Anac nang Bugtung a Guinu tamu.<br />
@@ -23,6 +9,19 @@ ban mucum caring mabie ampon mengamate.
 
 Sasalpantaya cu qñg Banal a Espiritu, qñg Santa Iglesia Catolica, qñg pamisamac ding Santos,<br /> 
 qñg pangapatauadda ring casalanan, qñg pangasubli rang mie ring mete, at qñg bie alang angga.<br />
+Amen.
+
+=== '''Baryanting Filipino''' ===
+Sasalpantaya  ku king Diyos, Ibpang mayupayang tutu, linalang king banwa at yatu.<br />
+At kang Hesukristong Anak nang Bugtung a Ginu tamu.<br />
+Pengagli Ya king upaya ning Banal a Espiritu, mibayit Ya kang Santa Mariang Birhen.<br />
+Linasa Ya lalam nang upaya nang Ponsyo Pilato. Mipaku ya king krus, mete Ya at mikutkut.<br />
+Tinipa Ya kareng mete. King katlung aldo, sinubli yang mebye. Pepaitas Ya banwa,<br /> 
+makalukluk wanan ning Diyos Ibpang mayupayang tutu. Ibat karin, magbalik Ya naman keti<br />
+ban mukum kareng mabye ampon mengamate.
+
+Sasalpantaya ku king Banal a Espiritu, king Santa Iglesia Katolika, king pamisamak ding Santos,<br /> 
+king pangapatawad dareng kasalanan, king pangasubli rang mie ring mete, at king bye alang angga.<br />
 Amen.
 
 [[Category:Kapampangan Pangadi]]
