--- a/Ailee.mw
+++ b/Ailee.mw
@@ -1,4 +1,9 @@
+[[File:Ailee (South Korean singer) on Oct 11, 2013 (7).jpg|thumb|I Ailee anyang 2013]]
 I '''Amy Lee''' ([[Lagyung Koreanu]]: '''Lee Yejin'''; [[Hangul]]: 이예진; [[Hanja]]: 李藝眞, mibait [[Mayu 30]], [[1989]]), mas mekilala ya bilang '''Ailee''', metung yang talakanta king [[Mauling Korea]].
+
+==Suglung palwal==
+*[http://instagram.com/aileeonline Ailee] king [[Instagram]]
+{{Commons category|Ailee}}
 
 {{stub}}
 
