--- a/Template:Country_data_Canada.mw
+++ b/Template:Country_data_Canada.mw
@@ -4,7 +4,7 @@
 | flag alias      = Flag of Canada (bordered).svg
 | flag alias-1868 = Canadian Red Ensign 1868-1921.svg
 | flag alias-1921 = Canadian Red Ensign 1921-1957.svg
-| flag alias-1957 = Canadian Red Ensign 1957-1965.svg
+| flag alias-1957 = Canadian Red Ensign (1957-1965).svg
 | countryname = {{{countryname|Canada<!-- MUST MATCH SUFFIX OF PAGENAME!! -->}}}
 | size = {{{size|}}}
 | name = {{{name|}}}
