--- a/Ústí_nad_Labem.mw
+++ b/Ústí_nad_Labem.mw
@@ -56,7 +56,7 @@
 | established = [[1056]] | established_type = First mentioned
 | established1 =  | established1_type =
 | date = 
-| mayor = Jan Kubata
+| mayor = Věra Nechybová
 <!-- *** Codes *** -->
 | timezone = | utc_offset = 
 | timezone_DST = | utc_offset_DST = 
