--- a/Plzeň.mw
+++ b/Plzeň.mw
@@ -72,7 +72,7 @@
 <!-- *** History & management *** -->
 | established        = 976
 | established_type   = First documented
-| mayor              = Pavel Rödl
+| mayor              = Martin Zrzavecký
 <!-- *** Codes *** -->
 | timezone           = 
 | timezone_DST       = 
