*Empty MediaWiki Message*

--- a/General_Trias.mw
+++ b/General_Trias.mw
@@ -13,7 +13,7 @@
 | 2030 = 		
 |}}
 	
-Ing '''Balen ning General Trias''' pang3 yang klasing [[Ding Balen ning Filipinas|balen]] king [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Cavite |Cavite]], [[Filipinas]].  Agpang keng [[2000]] sensus, atin yang populasyun a 107,691 a katau kareng 23,299 a pamimalemale.
+Ing '''Lakanbalen ning General Trias''' pang3 yang klasing [[Ding Lakanbalen ning Filipinas|lakanbalen]] king [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Cavite |Cavite]], [[Filipinas]].  Agpang keng [[2010]] sensus, atin yang populasyun a 243,322 a katau kareng 23,299 a pamimalemale.
 
 ==Deng Barangay==
 
@@ -64,4 +64,4 @@ Ing General Trias atin yang 33ng [[barangay]].
 
 {{Cavite}}
 
-[[Category:Balen ning Cavite]]
+[[Category:Lakanbalen ning Cavite]]
