*Empty MediaWiki Message*

--- a/General_Trias.mw
+++ b/General_Trias.mw
@@ -64,4 +64,4 @@ Ing General Trias atin yang 33ng [[barangay]].
 
 {{Cavite}}
 
-[[Category:Lakanbalen ning Cavite]]
+[[Category:Ding Lakanbalen ning Filipinas]]
