*Empty MediaWiki Message*

--- a/Imus.mw
+++ b/Imus.mw
@@ -14,7 +14,7 @@ pop2000      = 195,482 |
 popden2000   = 3,021|
 }}
 
-Ing '''Balen ning Imus''' primera yang klasing [[Ding Balen ning Filipinas|balen]] king [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Cavite |Cavite]], [[Filipinas]].  Agpang keng [[2000]] sensus, atin yang populasyun a 195,482 a katau kareng 42,232 a pamimalemale.
+Ing '''Lakanbalen ning Imus''' primera yang klasing [[Ding Lakanbalen ning Filipinas|lakanbalen]] king [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Cavite |Cavite]], [[Filipinas]].  Agpang keng [[2000]] sensus, atin yang populasyun a 195,482 a katau kareng 42,232 a pamimalemale.
 
 
 ==Deng Barangay==
@@ -183,4 +183,4 @@ Pamuntuk Balen
 
 {{Cavite}}
 
-[[Category:Balen ning Cavite]]
+[[Category:Ding Lakanbalen ning Filipinas]]
