*Empty MediaWiki Message*

--- a/Imus.mw
+++ b/Imus.mw
@@ -1,5 +1,5 @@
 {{Infobox Philippine municipality |
-infoboxtitle = Balen ning Imus |
+infoboxtitle = Lakanbalen ning Imus |
 sealfile     = Ph_seal_cavite_imus.png |
 locatormapfile = Ph_locator_cavite_imus.png |
 caption      = Mapa nang [[Cavite]] papakit ne ing karinan ning Imus. |
