*Empty MediaWiki Message*

--- a/Template:Cavite.mw
+++ b/Template:Cavite.mw
@@ -4,9 +4,9 @@
 | colspan="2" style="background:#ccccff; font-size: larger;" align="center" | '''[[Ding Lakanbalen ning Filipinas|Lakanbalen]] at [[Ding Balen ning Filipinas|Balen]] ning [[Cavite|Cavite]]'''
 |-
 |style="padding:0px 5px" align="right"|'''Syudad:''' 
-|style="padding:0px 5px" | [[Cavite Lakanbalen]] | [[Tagaytay Lakanbalen]] | [[Trece Martires Lakanbalen]] 
+|style="padding:0px 5px" | [[Bacoor Lakanbalen]] | [[Dasmariñas Lakanbalen]] | [[Cavite Lakanbalen]] | [[General Trias Lakanbalen]] | [[Imus Lakanbalen]] | [[Tagaytay Lakanbalen]] | [[Trece Martires Lakanbalen]] 
 |-
 |style="padding:0px 5px" align="right"|'''Balen:''' 
-|style="padding:0px 5px" | [[Alfonso, Cavite|Alfonso]] | [[Amadeo, Cavite|Amadeo]] | [[Bacoor, Cavite|Bacoor]] | [[Carmona, Cavite|Carmona]] | [[Dasmariñas, Cavite|Dasmariñas]] | [[Gen. Mariano Alvarez, Cavite|Gen. Mariano Alvarez]] | [[Gen. Emilio Aguinaldo, Cavite|Gen. Emilio Aguinaldo]] | [[Gen. Trias, Cavite|Gen. Trias]] | [[Imus, Cavite|Imus]] | [[Indang, Cavite|Indang]] | [[Kawit, Cavite|Kawit]] | [[Magallanes, Cavite|Magallanes]] | [[Maragondon, Cavite|Maragondon]] | [[Mendez, Cavite|Mendez]] | [[Naic, Cavite|Naic]] | [[Noveleta, Cavite|Noveleta]] | [[Rosario, Cavite|Rosario]] | [[Silang, Cavite|Silang]] | [[Tanza, Cavite|Tanza]] | [[Ternate, Cavite|Ternate]] 
+|style="padding:0px 5px" | [[Alfonso, Cavite|Alfonso]] | [[Amadeo, Cavite|Amadeo]]  | [[Carmona, Cavite|Carmona]] | [[Gen. Mariano Alvarez, Cavite|Gen. Mariano Alvarez]] | [[Gen. Emilio Aguinaldo, Cavite|Gen. Emilio Aguinaldo]] | [[Indang, Cavite|Indang]] | [[Kawit, Cavite|Kawit]] | [[Magallanes, Cavite|Magallanes]] | [[Maragondon, Cavite|Maragondon]] | [[Mendez, Cavite|Mendez]] | [[Naic, Cavite|Naic]] | [[Noveleta, Cavite|Noveleta]] | [[Rosario, Cavite|Rosario]] | [[Silang, Cavite|Silang]] | [[Tanza, Cavite|Tanza]] | [[Ternate, Cavite|Ternate]] 
 |}
 </div>
