*Empty MediaWiki Message*

--- a/Dasmariñas.mw
+++ b/Dasmariñas.mw
@@ -18,3 +18,11 @@
 
 
 Ing '''Balen ning Dasmariñas''' primera yang klasing [[Ding Balen ning Filipinas|balen]] king [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Cavite]], [[Filipinas]].  Agpang keng [[2000]] sensus, atin yang populasyun a 379,520 a katau kareng 77,315 a pamimalemale.
+
+==Kasusug Kilwal==
+*[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
+*[http://www.t-macs.com/kiso/local/ 2000 Philippine Census Information]
+
+{{Cavite}}
+
+[[Category:Ding Lakanbalen ning Filipinas]]
