*Empty MediaWiki Message*

--- a/Dasmariñas.mw
+++ b/Dasmariñas.mw
@@ -1,5 +1,5 @@
 {{Infobox Philippine municipality |
- infoboxtitle = Municipality of Dasmariñas |
+ infoboxtitle = Lakanbalen ning Dasmariñas |
  sealfile     = [[File:Ph_seal_cavite_dasmariñas.png|200px]] |
  locatormapfile = [[File:Ph_locator_cavite_dasmarinas.png|300px]] |
  caption      = Map of [[Cavite]] showing the location of Dasmarinas. |
@@ -17,7 +17,7 @@
 
 
 
-Ing '''Balen ning Dasmariñas''' primera yang klasing [[Ding Balen ning Filipinas|balen]] king [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Cavite]], [[Filipinas]].  Agpang keng [[2000]] sensus, atin yang populasyun a 379,520 a katau kareng 77,315 a pamimalemale.
+Ing '''Lakanbalen ning Dasmariñas''' primera yang klasing [[Ding Lakanbalen ning Filipinas|lakanbalen]] king [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Cavite]], [[Filipinas]].  Agpang keng [[2000]] sensus, atin yang populasyun a 379,520 a katau kareng 77,315 a pamimalemale.
 
 ==Kasusug Kilwal==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
