--- a/Bacoor.mw
+++ b/Bacoor.mw
@@ -1,5 +1,5 @@
 {{Infobox Philippine municipality |
- infoboxtitle = Balen ning Bacoor |
+ infoboxtitle = Lakanbalen ning Bacoor |
  sealfile     = [[File:Ph_seal_cavite_bacoor.png]] |
  locatormapfile = [[File:Ph_locator_cavite_bacoor.png]] |
  caption      = Map of [[Cavite]] showing the location of Bacoor. |
@@ -15,7 +15,7 @@
  popden2000   = 5,834 |
  coordinates  = 14°28'N 120°55'E |
 }}
-Ing '''Balen ning Bacoor''' primera yang klasing [[Ding Balen ning Filipinas|balen]] king [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Cavite]], [[Filipinas]].  Agpang keng [[2000]] sensus, atin yang populasyun a 305,699 a katau kareng 64,067 a pamimalemale. Iya ing kaduang pekamarakal a populasyun kaibat ning Dasmariñas at iti ing pekamasiksik karas keng populasyun.
+Ing '''Lakanbalen ning Bacoor''' primera yang klasing [[Ding Lakanbalen ning Filipinas|lakanbalen]] king [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Cavite]], [[Filipinas]].  Agpang keng [[2000]] sensus, atin yang populasyun a 305,699 a katau kareng 64,067 a pamimalemale. Iya ing kaduang pekamarakal a populasyun kaibat ning Dasmariñas at iti ing pekamasiksik karas keng populasyun.
 
 
 == Deng Barangay ==
@@ -115,4 +115,4 @@ Ing Bacoor atin yang  73 [[barangay]].
 {{Cavite}}
 
 [[Category:1671 establisamentu]]
-[[Category:Balen ning Cavite]]
+[[Category:Ding Lakanbalen ning Filipinas]]
