governor is now Hidehiko Yuzaki, according to English Wikipedia per se

--- a/Prepektura_ning_Hiroshima.mw
+++ b/Prepektura_ning_Hiroshima.mw
@@ -21,7 +21,7 @@
 | Bird           = [[Red-throated Diver|Red-throated&nbsp;diver]] (''Gavia stellata'')
 | Map            =Map_of_Japan_with_highlight_on_34_Hiroshima_prefecture.svg
 | Website        = [http://www.pref.hiroshima.lg.jp http://www.pref.hiroshima.lg.jp]
-| Governor       = [[Yuzan Fujita]]
+| Governor       = [[Hidehiko Yuzaki]]
 }}
 
 {{nihongo|'''Hiroshima Prefecture'''|広島県|Hiroshima-ken}} metung yang [[Prefectures of Japan|prefecture]] ning [[Japan]] a atiu keng  [[Chūgoku labuad]] keng  [[Honshū]] [[pulu]]. Ing kayang tungku iyapin ing lakanbalen ning [[Hiroshima]].
